; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_wi_stuff.c_WI_Start.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_wi_stuff.c_WI_Start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@deathmatch = common dso_local global i64 0, align 8
@netgame = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @WI_Start(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i32 @WI_initVariables(i32* %3)
  %5 = call i32 (...) @WI_loadData()
  %6 = load i64, i64* @deathmatch, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = call i32 (...) @WI_initDeathmatchStats()
  br label %18

10:                                               ; preds = %1
  %11 = load i64, i64* @netgame, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = call i32 (...) @WI_initNetgameStats()
  br label %17

15:                                               ; preds = %10
  %16 = call i32 (...) @WI_initStats()
  br label %17

17:                                               ; preds = %15, %13
  br label %18

18:                                               ; preds = %17, %8
  ret void
}

declare dso_local i32 @WI_initVariables(i32*) #1

declare dso_local i32 @WI_loadData(...) #1

declare dso_local i32 @WI_initDeathmatchStats(...) #1

declare dso_local i32 @WI_initNetgameStats(...) #1

declare dso_local i32 @WI_initStats(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
